--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.2.14",
+    "plotly.js": "^2.35.2",
+    "plotly.js-dist": "^2.35.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.14"
+    "react-plotly.js": "^2.6.0"
   },
   "devDependencies": {
+    "@types/react-plotly.js": "^2.6.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
